src/compiler/z42.Tests/Fixtures/errors/combined_modifier/source.z42
namespace Demo;

class Foo {
    public private int x;
}

void Main() { }
